Update fix image

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 MONGO_URL = "mongodb+srv://AdminX:admin123@project.ljdx6ja.mongodb.net/?retryWrites=true&w=majority"
-CLOUDINARY_URL=cloudinary://199734791412289:1fNguLsGv3oAr7XY_s_OcVcT3AY@dpvocrenk
+CLOUDINARY_URL=cloudinary://216529389883919:8AKQoxHY-CtMpjzWUz-u021bGOs@dvktk1a8x
